feat: 시즌 정산을 블라인드 타이머에서 전 게임으로 확장
BLIND_TIMER로 파이프라인을 선행 검증했으므로 SETTLEMENT_TARGET_GAMES를
EnumSet.allOf로 넓힌다. 포인트는 방 안 등수 기반이라 게임 간 점수 단위가
달라도 성립하고, 등수 계산은 전 게임 공통(MiniGameResult.calculateRank)이다.
전원 동점(전원 실패 포함) 판은 등수 결과를 그대로 신뢰해 전원 1등으로
정산한다 — 드문 케이스에 정산 계층이 게임별 실패 판정 지식을 갖는 비용이
더 크다고 판단했다(ADR-0035에 기록). 프론트 캡션·빈 상태 문구도 갱신.